<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/c13">

   <LinearLayout
        android:orientation="horizontal"
        android:layout_height="50dp"
        android:layout_width="fill_parent"
        android:layout_gravity="fill_vertical"
        android:background="@color/c12" >

        <Button 
            android:id="@+id/btn_back"
            android:layout_height="30dp" 
            android:layout_width="30dp" 
            android:background="@drawable/icon_action_back"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:onClick="onButtonClick" />   

		<TextView 
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textColor="@color/c07"
            android:textSize="16dp"
            android:text="@string/l_user_credentials"/>
			<!-- 
            android:layout_gravity="center_vertical"
            android:layout_margin="13dp"
			 -->             
    </LinearLayout>

    <TextView 
        android:layout_width="fill_parent" 
        android:layout_height="1dp"
        android:background="@color/c10" />   
   
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="fill_parent">
        
    	<LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical"
        	android:padding="10dp" >

        	<EditText
            	android:id="@+id/txt_username"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:layout_margin="3dp"
            	android:hint="@string/l_username"
            	android:inputType="text"
            	android:maxLength="50"
            	 />

        	<EditText
            	android:id="@+id/txt_password"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:layout_margin="3dp"
            	android:hint="@string/l_password"
            	android:inputType="textPassword"
            	android:maxLength="30" />
        
        	<Button
            	android:id="@+id/btn_sign_up"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:layout_margin="3dp" 
            	android:text="@string/l_sign_up" 
            	android:visibility="gone" 
            	android:onClick="onButtonClick"	/>

        	<LinearLayout
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:orientation="horizontal" >

            	<Button
                	android:id="@+id/btn_test"
                	android:layout_width="fill_parent"
                	android:layout_height="wrap_content"
                	android:layout_margin="3dp"
               		android:layout_weight="1"
                	android:text="@string/l_test"
                	android:onClick="onButtonClick" />

            	<Button
                	android:id="@+id/btn_save"
                	android:layout_width="fill_parent"
                	android:layout_height="wrap_content"
                	android:layout_margin="3dp"
                	android:layout_weight="1"
                	android:text="@string/l_save" 
                	android:onClick="onButtonClick" />
            
        	</LinearLayout>
    	</LinearLayout>
    </ScrollView>

</LinearLayout>